// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom provider 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0.zip",
    },
  ],
}
`;

exports[`dotted s3 bucket 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0.zip",
    },
  ],
}
`;

exports[`generic, github and spaces 1`] = `
Object {
  "mac": Array [
    Object {
      "file": "alpha-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "alpha-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "beta-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "beta-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "TestApp-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW-1.1.0-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.1.0-mac.zip.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`generic, github and spaces 2`] = `
Object {
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSRequiresNativeExecution": true,
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`github and spaces (publishAutoUpdate) 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.AppImage",
      "safeArtifactName": "TestApp-1.1.0-x86_64.AppImage",
      "updateInfo": Object {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "latest-linux.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "blockMapSize": "@blockMapSize",
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-x86_64.AppImage",
          },
        ],
        "path": "TestApp-1.1.0-x86_64.AppImage",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
  ],
}
`;

exports[`mac artifactName  1`] = `
Object {
  "mac": Array [
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW_1.1.0_mac.zip",
          },
        ],
        "path": "Test App ßW_1.1.0_mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW_1.1.0_mac.zip",
          },
        ],
        "path": "Test App ßW_1.1.0_mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW_1.1.0_mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW_1.1.0_mac.zip.blockmap",
      "safeArtifactName": "Test App ßW_1.1.0_mac.zip.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`mac artifactName  2`] = `
Object {
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSRequiresNativeExecution": true,
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`os macro 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0.zip",
    },
  ],
  "mac": Array [
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "blockMapSize": "@blockMapSize",
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
      "updateInfo": Object {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`os macro 2`] = `
Object {
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSRequiresNativeExecution": true,
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`os macro 3`] = `
Array [
  "latest/mac/Test App ßW-1.1.0-mac.zip",
  "latest/mac/latest-mac.yml",
  "latest/linux/TestApp-1.1.0.zip",
]
`;
